--- a/src/~Home/components/UI/Navbar.css
+++ b/src/~Home/components/UI/Navbar.css
@@ -1,6 +1,6 @@
-/* .nav-link.active {
+.nav-link.active {
   color: yellowgreen !important;
-} */
+}
 .nav-link {
   font-weight: 500;
   letter-spacing: 1pt;
@@ -11,4 +11,8 @@
   width: 100%;
   z-index: 2;
   /* background-color: #444; */
+}
+
+.nav-link:hover {
+  cursor: pointer;
 }
