--- a/src/~Home/components/UI/Portfolio.css
+++ b/src/~Home/components/UI/Portfolio.css
@@ -104,11 +104,17 @@
   position: relative !important;
 }
 
-.carousel::before {
+.carousel-item::before {
+  content: '';
   position: absolute;
   width: 100%;
-  height: 100px;
-  background-color: #000;
+  height: 200px;
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 1) 80%
+  );
+  bottom: 0;
 }
 .active .carousel-item {
   background-color: #000 !important;
@@ -118,3 +124,11 @@
   background-color: rgb(17, 23, 36);
   padding: 0 0 150px 0;
 }
+
+/* .carousel-caption::after {
+  content: '';
+  position: absolute;
+  width: 100px;
+  height: 2px;
+  background-color: rgb(0, 140, 255);
+} */
