--- a/src/~Home/components/UI/Hero.css
+++ b/src/~Home/components/UI/Hero.css
@@ -1,3 +1,9 @@
+@media (max-width : 500px) {
+  .hero h1 {
+    font-size: 60px!important;
+  }
+}
+
 .hero {
   height: calc(100vh);
   display: flex;
